syntax = "proto3";

package userspb;
option go_package = "github.com/rezaAmiri123/microservice/users/userspb";

message UserRegistered {
  string id = 1;
  string username = 2;
}


message UserEnabled {
  string id = 1;
}

message UserDisabled {
  string id = 1;
}
